# DLMS

./: .gitignore  INSTALL.md  LICENSE  README.md  SPEC.md  dlms.toml.example  pyproject.toml  schema.sql
examples/mcp/: README.md  stdio.mcp.json
skills/dlms/: SKILL.md
skills/dlms-check/: SKILL.md
skills/dlms-handoff/: SKILL.md
skills/dlms-patch/: SKILL.md
skills/dlms-plan/: SKILL.md
skills/dlms-resume/: SKILL.md
skills/dlms-trace/: SKILL.md
skills/dlms-tweak/: SKILL.md
src/dlms_cli/: __init__.py  atoms.py  cli.py  config.py  digest.py  doctor.py  edges.py  embeddings.py  enumerator.py  git_utils.py  handoff.py  ids.py  liveness.py  mcp_server.py  paths.py  retrieval.py  router.py  statusline.py  store.py  watcher.py
src/dlms_cli/ingesters/: __init__.py  base.py  git_commits.py  manifest.py  modules.py  readme.py  schema_sql.py  symbols.py
tests/: conftest.py  test_atoms.py  test_digest.py  test_doctor.py  test_edges.py  test_embeddings.py  test_enumerator.py  test_handoff.py  test_ids.py  test_incremental.py  test_ingesters.py  test_liveness.py  test_mcp_server.py  test_modules.py  test_retrieval.py  test_router.py  test_statusline.py  test_store.py  test_vec_index.py  test_watcher.py
